--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "@turf/helpers": "^7.2.0",
     "@turf/turf": "^7.2.0",
     "leaflet": "^1.9.4",
-    "next": "15.5.3",
+    "next": "14.2.5",
     "ol": "^10.6.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
@@ -31,11 +31,13 @@
     "@types/geojson": "^7946.0.16",
     "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3",
-    "tailwindcss": "^4",
+    "eslint-config-next": "14.2.5",
+    "tailwindcss": "^3.4.13",
+    "postcss": "^8.4.41",
+    "autoprefixer": "^10.4.20",
     "typescript": "^5"
   }
 }
