--- a/package.json
+++ b/package.json
@@ -1,43 +1,1 @@
-{
-  "name": "navigoplan",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint",
-    "validate:ports": "node scripts/validate-ports.js public/data/ports.v1.json",
-    "dedupe:ports": "node scripts/dedupe-ports.js public/data/ports.v1.json",
-    "fix:ports": "node scripts/dedupe-ports.js public/data/ports.v1.json && node scripts/validate-ports.js public/data/ports.v1.json"
-  },
-  "engines": {
-    "node": ">=18 <23"
-  },
-  "dependencies": {
-    "@turf/boolean-intersects": "^7.2.0",
-    "@turf/buffer": "^7.2.0",
-    "@turf/helpers": "^7.2.0",
-    "@turf/turf": "^7.2.0",
-    "leaflet": "^1.9.4",
-    "next": "14.2.5",
-    "ol": "^10.6.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-leaflet": "^5.0.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/geojson": "^7946.0.16",
-    "@types/leaflet": "^1.9.20",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^9",
-    "eslint-config-next": "14.2.5",
-    "tailwindcss": "^3.4.13",
-    "postcss": "^8.4.41",
-    "autoprefixer": "^10.4.20",
-    "typescript": "^5"
-  }
-}
+{ "name": "navigoplan", "version": "0.1.0", "private": true, "scripts": { "dev": "next dev", "build": "next build", "start": "next start", "lint": "eslint", "validate:ports": "node scripts/validate-ports.js public/data/ports.v1.json", "dedupe:ports": "node scripts/dedupe-ports.js public/data/ports.v1.json", "fix:ports": "node scripts/dedupe-ports.js public/data/ports.v1.json && node scripts/validate-ports.js public/data/ports.v1.json" }, "engines": { "node": ">=18 <23" }, "dependencies": { "@turf/boolean-intersects": "^7.2.0", "@turf/buffer": "^7.2.0", "@turf/helpers": "^7.2.0", "@turf/turf": "^7.2.0", "leaflet": "^1.9.4", "next": "15.5.3", "ol": "^10.6.1", "react": "19.1.0", "react-dom": "19.1.0", "react-leaflet": "^5.0.0" }, "devDependencies": { "@eslint/eslintrc": "^3", "@tailwindcss/postcss": "^4", "@types/geojson": "^7946.0.16", "@types/leaflet": "^1.9.20", "@types/node": "^20", "@types/react": "^19", "@types/react-dom": "^19", "eslint": "^9", "eslint-config-next": "15.5.3", "tailwindcss": "^4", "typescript": "^5" } }
