--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
       "@/*": ["*"],
       "@/app/*": ["app/*"],
       "@/components/*": ["app/components/*"],
-      "@/lib/*": ["app/lib/*"]
+      "@/lib/*": ["lib/*"]        // <— fix: δείχνει στον /lib (ρίζα)
     },
     "plugins": [{ "name": "next" }]
   },
