--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
+    "postinstall": "prisma generate",
     "start": "next start",
     "lint": "eslint",
     "validate:ports": "node scripts/validate-ports.js public/data/ports.v1.json",
     "dedupe:ports": "node scripts/dedupe-ports.js public/data/ports.v1.json",
-    "fix:ports": "node scripts/dedupe-ports.js public/data/ports.v1.json && node scripts/validate-ports.js public/data/ports.v1.json"
+    "fix:ports": "node scripts/dedupe-ports.js public/data/ports.v1.json && node scripts/validate-ports.js public/data/ports.v1.json",
+    "prisma:generate": "prisma generate"
   },
   "engines": {
     "node": ">=18 <23"
