--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@turf/buffer": "^7.2.0",
     "@turf/helpers": "^7.2.0",
     "@turf/turf": "^7.2.0",
+    "framer-motion": "^12.23.24",
     "leaflet": "^1.9.4",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
