--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.18.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.0",
     "@turf/boolean-intersects": "^7.2.0",
     "@turf/buffer": "^7.2.0",
     "@turf/helpers": "^7.2.0",
@@ -32,7 +34,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-leaflet": "^5.0.0",
-    "resend": "^6.2.2"
+    "resend": "^6.2.2",
+    "three": "^0.181.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
